--- a/ficha.html
+++ b/ficha.html
@@ -130,75 +130,92 @@
 
       <!-- Modo Edição -->
       <form id="editMode" class="edit-mode">
-        <div class="foto-container">
-          <img id="fotoPreview" alt="Preview da foto" />
-          <label for="fotoInput" class="foto-upload-btn">
-            <i class="bi bi-camera"></i>
-          </label>
-          <input type="file" id="fotoInput" accept="image/*" class="d-none">
-          <input type="hidden" id="editFotoURL">
-        </div>
+  <div class="foto-container">
+    <img id="fotoPreview" alt="Preview da foto" />
+    <label for="fotoInput" class="foto-upload-btn">
+      <i class="bi bi-camera"></i>
+    </label>
+    <input type="file" id="fotoInput" accept="image/*" class="d-none">
+    <input type="hidden" id="editFotoURL">
+  </div>
 
-        <div class="mb-3">
-          <label for="editNome" class="form-label">Nome</label>
-          <input type="text" class="form-control" id="editNome" required>
-        </div>
-        <div class="mb-3">
-          <label for="editCep" class="form-label">CEP</label>
-          <input type="text" class="form-control" id="editCep">
-        </div>
-        <div class="mb-3">
-          <label for="editEndereco" class="form-label">Endereço</label>
-          <input type="text" class="form-control" id="editEndereco">
-        </div>
-        <div class="mb-3">
-          <label for="editBairro" class="form-label">Bairro</label>
-          <input type="text" class="form-control" id="editBairro">
-        </div>
-        <div class="mb-3">
-          <label for="editCidade" class="form-label">Cidade</label>
-          <input type="text" class="form-control" id="editCidade">
-        </div>
-        <div class="mb-3">
-          <label for="editEstado" class="form-label">Estado</label>
-          <input type="text" class="form-control" id="editEstado">
-        </div>
-        <div class="mb-3">
-          <label for="editBatismo" class="form-label">Data de Batismo</label>
-          <input type="date" class="form-control" id="editBatismo">
-        </div>
-        <div class="mb-3">
-          <label for="editNascimento" class="form-label">Data de Nascimento</label>
-          <input type="date" class="form-control" id="editNascimento">
-        </div>
-        <div class="mb-3">
-          <label for="editFuncao" class="form-label">Função</label>
-          <select class="form-select" id="editFuncao" required>
-            <option value="">Selecione uma função</option>
-            <option value="Pastor">Pastor</option>
-            <option value="Missionario(a)">Missionário(a)</option>
-            <option value="Diacono">Diácono</option>
-            <option value="Obreiro(a)">Obreiro(a)</option>
-            <option value="Membro">Membro</option>
-          </select>
-        </div>
-        <div class="mb-3">
-          <label for="editTelefone" class="form-label">Telefone</label>
-          <input type="tel" class="form-control" id="editTelefone">
-        </div>
-        <div class="mb-3">
-          <label for="editSexo" class="form-label">Sexo</label>
-          <select class="form-select" id="editSexo">
-            <option value="masculino">Masculino</option>
-            <option value="feminino">Feminino</option>
-            
-          </select>
-        </div>
-        <div class="d-flex justify-content-between mt-3">
-          <button type="button" id="cancelEditBtn" class="btn btn-outline-secondary">Cancelar</button>
-          <button type="submit" class="btn btn-primary">Salvar</button>
-        </div>
-      </form>
+  <div class="mb-3">
+    <label for="editNome" class="form-label">Nome</label>
+    <input type="text" class="form-control" id="editNome" required>
+  </div>
+
+  <div class="mb-3">
+    <label for="editCep" class="form-label">CEP</label>
+    <input type="text"
+           class="form-control"
+           id="editCep"
+           name="editCep"
+           maxlength="9"
+           placeholder="00000-000"
+           onblur="buscarCEP('editCep', 'editEndereco', 'editBairro', 'editCidade', 'editEstado')">
+  </div>
+
+  <div class="mb-3">
+    <label for="editEndereco" class="form-label">Endereço</label>
+    <input type="text" class="form-control" id="editEndereco">
+  </div>
+
+  <div class="mb-3">
+    <label for="editBairro" class="form-label">Bairro</label>
+    <input type="text" class="form-control" id="editBairro">
+  </div>
+
+  <div class="mb-3">
+    <label for="editCidade" class="form-label">Cidade</label>
+    <input type="text" class="form-control" id="editCidade">
+  </div>
+
+  <div class="mb-3">
+    <label for="editEstado" class="form-label">Estado</label>
+    <input type="text" class="form-control" id="editEstado">
+  </div>
+
+  <div class="mb-3">
+    <label for="editBatismo" class="form-label">Data de Batismo</label>
+    <input type="date" class="form-control" id="editBatismo">
+  </div>
+
+  <div class="mb-3">
+    <label for="editNascimento" class="form-label">Data de Nascimento</label>
+    <input type="date" class="form-control" id="editNascimento">
+  </div>
+
+  <div class="mb-3">
+    <label for="editFuncao" class="form-label">Função</label>
+    <select class="form-select" id="editFuncao" required>
+      <option value="">Selecione uma função</option>
+      <option value="Pastor">Pastor</option>
+      <option value="Missionario(a)">Missionário(a)</option>
+      <option value="Diacono">Diácono</option>
+      <option value="Obreiro(a)">Obreiro(a)</option>
+      <option value="Membro">Membro</option>
+    </select>
+  </div>
+
+  <div class="mb-3">
+    <label for="editTelefone" class="form-label">Telefone</label>
+    <input type="tel" class="form-control" id="editTelefone">
+  </div>
+
+  <div class="mb-3">
+    <label for="editSexo" class="form-label">Sexo</label>
+    <select class="form-select" id="editSexo">
+      <option value="masculino">Masculino</option>
+      <option value="feminino">Feminino</option>
+    </select>
+  </div>
+
+  <div class="d-flex justify-content-between mt-3">
+    <button type="button" id="cancelEditBtn" class="btn btn-outline-secondary">Cancelar</button>
+    <button type="submit" class="btn btn-primary">Salvar</button>
+  </div>
+</form>
+
     </div>
   </main>
 
