--- a/ficha.html
+++ b/ficha.html
@@ -9,6 +9,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 
+<!-- Biblioteca de máscara -->
+  <script src="https://unpkg.com/imask"></script>
+  
+
+  
+
   <style>
     #foto {
       width: 150px;
@@ -642,6 +648,8 @@ function formatDateForPDF(dateString) {
 
 <!-- Logoff após inatividade -->
 <script type="module" src="js/session-timeout.js"></script>
+
+  <script type="module" src="app.js"></script>
 
 </body>
 </html>
