--- a/listagem.html
+++ b/listagem.html
@@ -153,6 +153,13 @@ body.autorizado .conteudo-restrito {
             <i class="fas fa-home me-1"></i> Home
           </a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="cadastro-membros.html">
+            <i class="fas fa-users me-1"></i> Cadastro de Membros
+          </a>
+        </li>
+        
       </ul>
     </div>
   </div> 
