--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -34,6 +34,13 @@
             <i class="fas fa-home me-1"></i> Home
           </a>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link" href="listagem.html">
+            <i class="fas fa-list me-1"></i> Lista de Membros
+          </a>
+        </li>
+        
       </ul>
     </div>
   </div> 
