--- a/register.html
+++ b/register.html
@@ -164,12 +164,18 @@
                 <i class="fas fa-eye toggle-password" onclick="togglePassword('password')"></i>
               </div>
               
-              <div class="mb-3 form-check">
-                <input type="checkbox" id="isAdmin" class="form-check-input">
-                <label for="isAdmin" class="form-check-label">
-                  <i class="fas fa-user-shield me-1"></i> É administrador?
-                </label>
-              </div>
+              <div class="mb-3">
+  <label for="role" class="form-label">
+    <i class="fas fa-user-tag me-1"></i> Papel do Usuário
+  </label>
+  <select id="role" class="form-select" required>
+    <option value="admin">Admin</option>
+    <option value="secretaria">Secretaria</option>
+    <option value="financeiro">Financeiro</option>
+    <option value="membro" selected>Membro</option>
+  </select>
+</div>
+
               
               <button type="submit" class="btn btn-primary w-100 py-2">
                 <i class="fas fa-save me-2"></i> Cadastrar Usuário
