--- a/cadastro-membros.html
+++ b/cadastro-membros.html
@@ -34,13 +34,6 @@
             <i class="fas fa-home me-1"></i> Home
           </a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="listagem.html">
-            <i class="fas fa-list me-1"></i> Lista de Membros
-          </a>
-        </li>
-        
       </ul>
     </div>
   </div> 
@@ -85,7 +78,7 @@
         <div>
           <label for="endereco" class="form-label required-field">Endereço</label>
           <div class="relative">
-            <input type="text" id="endereco" name="endereco" class="form-control" placeholder="Digite o endereço completo">
+            <input type="text" id="endereco" name="endereco" class="form-control" required placeholder="Digite o endereço completo">
             <i class="fas fa-map-marker-alt input-icon"></i>
           </div>
         </div>
@@ -94,7 +87,7 @@
         <div>
           <label for="bairro" class="form-label required-field">Bairro</label>
             <div class="relative">
-              <input type="text" id="bairro" name="bairro" class="form-control" placeholder="Digite o Bairro">
+              <input type="text" id="bairro" name="bairro" class="form-control" required placeholder="Digite o Bairro">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -103,7 +96,7 @@
           <div>
             <label for="cidade" class="form-label required-field">Cidade</label>
             <div class="relative">
-              <input type="text" id="cidade" name="cidade" class="form-control" placeholder="Digite a Cidade">
+              <input type="text" id="cidade" name="cidade" class="form-control" required placeholder="Digite a Cidade">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -112,7 +105,7 @@
           <div>
             <label for="estado" class="form-label required-field">Estado</label>
             <div class="relative">
-              <input type="text" id="estado" name="estado" class="form-control" placeholder="Digite o Estado">
+              <input type="text" id="estado" name="estado" class="form-control" required placeholder="Digite o Estado">
               <i class="fas fa-map-marker-alt input-icon"></i>
             </div>
           </div>
@@ -128,9 +121,9 @@
 
         <!-- Campo data nascimento -->
         <div>
-          <label for="nascimento" class="form-label">Data de Nascimento</label>
+          <label for="nascimento" class="form-label required-field">Data de Nascimento</label>
           <div class="relative">
-            <input type="date" id="nascimento" name="nascimento" class="form-control">
+            <input type="date" id="nascimento" name="nascimento" class="form-control" required>
             <i class="fas fa-birthday-cake input-icon"></i>
           </div>
         </div>
@@ -153,9 +146,9 @@
 
         <!-- Campo Telefone -->
         <div>
-          <label for="telefone" class="form-label">Telefone</label>
+          <label for="telefone" class="form-label required-field">Telefone</label>
           <div class="relative">
-            <input type="text" id="telefone" name="telefone" class="form-control" 
+            <input type="text" id="telefone" name="telefone" class="form-control" required 
                    placeholder="(00) 00000-0000" maxlength="15">
             <i class="fas fa-phone input-icon"></i>
           </div>
@@ -191,10 +184,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="app.js"></script>
 
-
-  
-<!-- Logoff após inatividade -->
-<script type="module" src="js/session-timeout.js"></script>
+  <script src="js/session-timeout.js"></script>
   
 </body>
 </html>
