--- a/ficha.html
+++ b/ficha.html
@@ -9,12 +9,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
   <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 
-<!-- Biblioteca de máscara -->
-  <script src="https://unpkg.com/imask"></script>
-  
-
-  
-
   <style>
     #foto {
       width: 150px;
@@ -136,92 +130,75 @@
 
       <!-- Modo Edição -->
       <form id="editMode" class="edit-mode">
-  <div class="foto-container">
-    <img id="fotoPreview" alt="Preview da foto" />
-    <label for="fotoInput" class="foto-upload-btn">
-      <i class="bi bi-camera"></i>
-    </label>
-    <input type="file" id="fotoInput" accept="image/*" class="d-none">
-    <input type="hidden" id="editFotoURL">
-  </div>
+        <div class="foto-container">
+          <img id="fotoPreview" alt="Preview da foto" />
+          <label for="fotoInput" class="foto-upload-btn">
+            <i class="bi bi-camera"></i>
+          </label>
+          <input type="file" id="fotoInput" accept="image/*" class="d-none">
+          <input type="hidden" id="editFotoURL">
+        </div>
 
-  <div class="mb-3">
-    <label for="editNome" class="form-label">Nome</label>
-    <input type="text" class="form-control" id="editNome" required>
-  </div>
-
-  <div class="mb-3">
-    <label for="editCep" class="form-label">CEP</label>
-    <input type="text"
-           class="form-control"
-           id="editCep"
-           name="editCep"
-           maxlength="9"
-           placeholder="00000-000"
-           onblur="buscarCEP('editCep', 'editEndereco', 'editBairro', 'editCidade', 'editEstado')">
-  </div>
-
-  <div class="mb-3">
-    <label for="editEndereco" class="form-label">Endereço</label>
-    <input type="text" class="form-control" id="editEndereco">
-  </div>
-
-  <div class="mb-3">
-    <label for="editBairro" class="form-label">Bairro</label>
-    <input type="text" class="form-control" id="editBairro">
-  </div>
-
-  <div class="mb-3">
-    <label for="editCidade" class="form-label">Cidade</label>
-    <input type="text" class="form-control" id="editCidade">
-  </div>
-
-  <div class="mb-3">
-    <label for="editEstado" class="form-label">Estado</label>
-    <input type="text" class="form-control" id="editEstado">
-  </div>
-
-  <div class="mb-3">
-    <label for="editBatismo" class="form-label">Data de Batismo</label>
-    <input type="date" class="form-control" id="editBatismo">
-  </div>
-
-  <div class="mb-3">
-    <label for="editNascimento" class="form-label">Data de Nascimento</label>
-    <input type="date" class="form-control" id="editNascimento">
-  </div>
-
-  <div class="mb-3">
-    <label for="editFuncao" class="form-label">Função</label>
-    <select class="form-select" id="editFuncao" required>
-      <option value="">Selecione uma função</option>
-      <option value="Pastor">Pastor</option>
-      <option value="Missionario(a)">Missionário(a)</option>
-      <option value="Diacono">Diácono</option>
-      <option value="Obreiro(a)">Obreiro(a)</option>
-      <option value="Membro">Membro</option>
-    </select>
-  </div>
-
-  <div class="mb-3">
-    <label for="editTelefone" class="form-label">Telefone</label>
-    <input type="tel" class="form-control" id="editTelefone">
-  </div>
-
-  <div class="mb-3">
-    <label for="editSexo" class="form-label">Sexo</label>
-    <select class="form-select" id="editSexo">
-      <option value="masculino">Masculino</option>
-      <option value="feminino">Feminino</option>
-    </select>
-  </div>
-
-  <div class="d-flex justify-content-between mt-3">
-    <button type="button" id="cancelEditBtn" class="btn btn-outline-secondary">Cancelar</button>
-    <button type="submit" class="btn btn-primary">Salvar</button>
-  </div>
-</form>
-
+        <div class="mb-3">
+          <label for="editNome" class="form-label">Nome</label>
+          <input type="text" class="form-control" id="editNome" required>
+        </div>
+        <div class="mb-3">
+          <label for="editCep" class="form-label">CEP</label>
+          <input type="text" class="form-control" id="editCep">
+        </div>
+        <div class="mb-3">
+          <label for="editEndereco" class="form-label">Endereço</label>
+          <input type="text" class="form-control" id="editEndereco">
+        </div>
+        <div class="mb-3">
+          <label for="editBairro" class="form-label">Bairro</label>
+          <input type="text" class="form-control" id="editBairro">
+        </div>
+        <div class="mb-3">
+          <label for="editCidade" class="form-label">Cidade</label>
+          <input type="text" class="form-control" id="editCidade">
+        </div>
+        <div class="mb-3">
+          <label for="editEstado" class="form-label">Estado</label>
+          <input type="text" class="form-control" id="editEstado">
+        </div>
+        <div class="mb-3">
+          <label for="editBatismo" class="form-label">Data de Batismo</label>
+          <input type="date" class="form-control" id="editBatismo">
+        </div>
+        <div class="mb-3">
+          <label for="editNascimento" class="form-label">Data de Nascimento</label>
+          <input type="date" class="form-control" id="editNascimento">
+        </div>
+        <div class="mb-3">
+          <label for="editFuncao" class="form-label">Função</label>
+          <select class="form-select" id="editFuncao" required>
+            <option value="">Selecione uma função</option>
+            <option value="Pastor">Pastor</option>
+            <option value="Missionario(a)">Missionário(a)</option>
+            <option value="Diacono">Diácono</option>
+            <option value="Obreiro(a)">Obreiro(a)</option>
+            <option value="Membro">Membro</option>
+          </select>
+        </div>
+        <div class="mb-3">
+          <label for="editTelefone" class="form-label">Telefone</label>
+          <input type="tel" class="form-control" id="editTelefone">
+        </div>
+        <div class="mb-3">
+          <label for="editSexo" class="form-label">Sexo</label>
+          <select class="form-select" id="editSexo">
+            <option value="masculino">Masculino</option>
+            <option value="feminino">Feminino</option>
+            
+          </select>
+        </div>
+        <div class="d-flex justify-content-between mt-3">
+          <button type="button" id="cancelEditBtn" class="btn btn-outline-secondary">Cancelar</button>
+          <button type="submit" class="btn btn-primary">Salvar</button>
+        </div>
+      </form>
     </div>
   </main>
 
@@ -644,99 +621,5 @@ function formatDateForPDF(dateString) {
 
   <!-- Script do Bootstrap (último elemento) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
-
-<!-- Logoff após inatividade -->
-<script type="module" src="js/session-timeout.js"></script>
-
-
-  
-  
-  
-  <script>
-document.addEventListener('DOMContentLoaded', () => {
-  // Máscara do CEP
-  const editCepInput = document.getElementById('editCep');
-  if (editCepInput) {
-    IMask(editCepInput, { mask: '00000-000' });
-
-    editCepInput.addEventListener('input', () => {
-      const cep = editCepInput.value.replace(/\D/g, '');
-      if (cep.length === 8) {
-        buscarCEP();
-      }
-    });
-  }
-
-  // Máscara do telefone
-  const editTelefoneInput = document.getElementById('editTelefone');
-  if (editTelefoneInput) {
-    IMask(editTelefoneInput, {
-      mask: [
-        { mask: '(00) 0000-0000' },
-        { mask: '(00) 00000-0000' }
-      ],
-      dispatch: function (appended, dynamicMasked) {
-        const number = (dynamicMasked.value + appended).replace(/\D/g, '');
-        return number.length > 10
-          ? dynamicMasked.compiledMasks[1]
-          : dynamicMasked.compiledMasks[0];
-      }
-    });
-  }
-});
-
-function buscarCEP(
-  cepId = 'editCep',
-  enderecoId = 'editEndereco',
-  bairroId = 'editBairro',
-  cidadeId = 'editCidade',
-  estadoId = 'editEstado'
-) {
-  const cepInput = document.getElementById(cepId);
-  const cep = cepInput.value.replace(/\D/g, '');
-
-  const endereco = document.getElementById(enderecoId);
-  const bairro = document.getElementById(bairroId);
-  const cidade = document.getElementById(cidadeId);
-  const estado = document.getElementById(estadoId);
-
-  if (cep.length !== 8) {
-    // limpa apenas os campos se o CEP ficar inválido novamente
-    endereco.value = '';
-    bairro.value = '';
-    cidade.value = '';
-    estado.value = '';
-    return;
-  }
-
-  fetch(`https://viacep.com.br/ws/${cep}/json/`)
-    .then(response => response.json())
-    .then(data => {
-      if (data.erro) {
-        endereco.value = 'CEP não encontrado';
-        bairro.value = '';
-        cidade.value = '';
-        estado.value = '';
-      } else {
-        const ruaComNumero = `${data.logradouro || ''}, Nº`;
-        endereco.value = ruaComNumero;
-        bairro.value = data.bairro || '';
-        cidade.value = data.localidade || '';
-        estado.value = data.uf || '';
-      }
-    })
-    .catch(error => {
-      console.error('Erro ao buscar o CEP:', error);
-      endereco.value = 'Erro ao buscar';
-      bairro.value = '';
-      cidade.value = '';
-      estado.value = '';
-    });
-}
-</script>
-
-
-
 </body>
 </html>
