--- a/listagem.html
+++ b/listagem.html
@@ -153,13 +153,6 @@ body.autorizado .conteudo-restrito {
             <i class="fas fa-home me-1"></i> Home
           </a>
         </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="cadastro-membros.html">
-            <i class="fas fa-users me-1"></i> Cadastro de Membros
-          </a>
-        </li>
-        
       </ul>
     </div>
   </div> 
@@ -291,11 +284,7 @@ onValue(membrosRef, (snapshot) => {
 });
 </script>
 
-
-  
-
-  
- <script>
+<script>
 const btnExportarPDF = document.getElementById("btnExportarPDF");
 
 btnExportarPDF.addEventListener("click", async () => {
@@ -340,33 +329,32 @@ btnExportarPDF.addEventListener("click", async () => {
       return;
     }
 
-    const membrosArrayRaw = Object.values(snapshot.val())
-      .map(m => {
-        const funcao = (m.funcao || "").toLowerCase();
-        let ordemFuncao = 6;
-        if (funcao === "pastor") ordemFuncao = 1;
-        else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
-        else if (funcao === "diacono") ordemFuncao = 3;
-        else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
-        else if (funcao === "membro") ordemFuncao = 5;
+    const membrosArray = Object.values(snapshot.val())
+    .map(m => {
+      const funcao = (m.funcao || "").toLowerCase();
+      let ordemFuncao = 6;
+      if (funcao === "pastor") ordemFuncao = 1;
+      else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
+      else if (funcao === "diacono") ordemFuncao = 3;
+      else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
+      else if (funcao === "membro") ordemFuncao = 5;
 
-        return {
-          ...m,
-          ordemFuncao,
-          sexoFormatado: m.sexo === "M" || (m.sexo || "").toLowerCase() === "masculino" ? "Masculino" :
-                         m.sexo === "F" || (m.sexo || "").toLowerCase() === "feminino" ? "Feminino" :
-                         "Não informado",
-          nomeFormatado: m.nome ? m.nome.toUpperCase() : "Não informado",
-          funcaoFormatada: m.funcao ? m.funcao.toUpperCase() : "Não informado"
-        };
-      })
-      .sort((a, b) => {
-        const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
-        if (ordemFuncao !== 0) return ordemFuncao;
-        return a.nome?.localeCompare(b.nome);
-      });
-
-    const membrosArray = membrosArrayRaw.map(m => {
+      return {
+        ...m,
+        ordemFuncao,
+        sexoFormatado: m.sexo === "M" || (m.sexo || "").toLowerCase() === "masculino" ? "Masculino" :
+                       m.sexo === "F" || (m.sexo || "").toLowerCase() === "feminino" ? "Feminino" :
+                       "Não informado",
+        nomeFormatado: m.nome ? m.nome.toUpperCase() : "Não informado",
+        funcaoFormatada: m.funcao ? m.funcao.toUpperCase() : "Não informado"
+      };
+    })
+    .sort((a, b) => {
+      const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
+      if (ordemFuncao !== 0) return ordemFuncao;
+      return a.nome?.localeCompare(b.nome);
+    })
+    .map(m => {
       const partesEndereco = [
         m.endereco,
         m.numero && `Nº${m.numero}`,
@@ -377,27 +365,8 @@ btnExportarPDF.addEventListener("click", async () => {
 
       const enderecoCompleto = partesEndereco.join(", ");
 
-      // calcular idade e faixa etária
-      let idade = "-";
-      let faixa = "Não informado";
-      if (m.nascimento) {
-        const nasc = new Date(m.nascimento);
-        const hoje = new Date();
-        idade = hoje.getFullYear() - nasc.getFullYear();
-        const mDiff = hoje.getMonth() - nasc.getMonth();
-        if (mDiff < 0 || (mDiff === 0 && hoje.getDate() < nasc.getDate())) {
-          idade--;
-        }
-
-        if (idade <= 9) faixa = "Criança";
-        else if (idade <= 12) faixa = "Adolescente";
-        else if (idade <= 29) faixa = "Jovem";
-        else faixa = "Adulto";
-      }
-
       return [
         m.nomeFormatado,
-        faixa,
         m.nascimento ? formatDate(m.nascimento) : "Não informado",
         m.sexoFormatado,
         m.telefone || "Não informado",
@@ -407,18 +376,16 @@ btnExportarPDF.addEventListener("click", async () => {
       ];
     });
 
-    // TABELA PRINCIPAL
     doc.autoTable({
-      head: [["NOME", "FAIXA ETÁRIA", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
+      head: [["NOME", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
       body: membrosArray,
       startY: startY,
       margin: { top: 10, bottom: 15 },
-      styles: { fontSize: 9 },
-      headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 9, fontStyle: 'bold' },
+      styles: { fontSize: 10 },
+      headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 10, fontStyle: 'bold' },
       columnStyles: {
-        0: { cellWidth: 45 },  // Nome
-        1: { cellWidth: 25 },  // Faixa
-        7: { cellWidth: 80 }   // Endereço
+        0: { cellWidth: 60 },  // Nome
+        6: { cellWidth: 80 }   // Endereço
       },
       didDrawPage: function(data) {
         doc.setFontSize(8);
@@ -426,69 +393,6 @@ btnExportarPDF.addEventListener("click", async () => {
         const now = new Date();
         doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
       }
-    });
-
-    // RESUMO PROFISSIONAL
-    const resumo = {
-  funcoes: { Pastor: 0, Missionário: 0, Diácono: 0, Membro: 0 },
-  sexos: { Masculino: 0, Feminino: 0 },
-  faixas: { Criança: 0, Adolescente: 0, Jovem: 0, Adulto: 0 },
-  total: membrosArray.length
-};
-
-membrosArray.forEach(row => {
-  const funcao = row[5].toLowerCase();
-  const sexo = row[3];
-  const faixa = row[1];
-
-  if (funcao.includes("pastor")) resumo.funcoes.Pastor++;
-  else if (funcao.includes("missionario")) resumo.funcoes.Missionário++;
-  else if (funcao.includes("diácono") || funcao.includes("diacono")) resumo.funcoes.Diácono++;
-  else resumo.funcoes.Membro++;
-
-  if (sexo === "Masculino") resumo.sexos.Masculino++;
-  else if (sexo === "Feminino") resumo.sexos.Feminino++;
-
-  if (faixa in resumo.faixas) resumo.faixas[faixa]++;
-});
-
-
-    let finalY = doc.lastAutoTable.finalY + 10;
-    const pageHeight = doc.internal.pageSize.getHeight();
-
-    if (finalY + 80 > pageHeight - 15) {
-      doc.addPage();
-      finalY = 20;
-    }
-
-    const makeResumoTable = (title, dataObj) => {
-      const rows = Object.entries(dataObj).map(([k, v]) => [k, v]);
-      doc.autoTable({
-        head: [[title, "Quantidade"]],
-        body: rows,
-        startY: finalY,
-        theme: 'grid',
-        styles: { fontSize: 10 },
-        headStyles: { fillColor: [22, 160, 133], textColor: 255, fontStyle: 'bold' },
-        margin: { left: 10, right: 10 },
-        tableWidth: 'auto'
-      });
-      finalY = doc.lastAutoTable.finalY + 5;
-    };
-
-    makeResumoTable("Resumo por Função", resumo.funcoes);
-    makeResumoTable("Resumo por Sexo", resumo.sexos);
-    makeResumoTable("Resumo por Faixa Etária", resumo.faixas);
-
-    doc.autoTable({
-      head: [["TOTAL GERAL DE MEMBROS", resumo.total]],
-      body: [],
-      startY: finalY,
-      theme: 'plain',
-      styles: { fontSize: 12 },
-      headStyles: { fillColor: [39, 174, 96], textColor: 255, halign: 'center' },
-      margin: { left: 10, right: 10 },
-      tableWidth: 'auto'
     });
 
     doc.save("Lista_Membros.pdf");
@@ -524,21 +428,12 @@ function mostrarMensagemPDF(mensagem) {
 }
 </script>
 
-
-
-
-
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 <script>
 window.jsPDFGlobal = window.jspdf.jsPDF;
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
-
-<!-- Logoff após inatividade -->
-<script type="module" src="js/session-timeout.js"></script>
 
 </body>
 </html>
