--- a/register.html
+++ b/register.html
@@ -18,40 +18,6 @@
       padding-top: 70px;
       background-color: #f8f9fa;
     }
-
-     .navbar {
-  background-color: #4CAF50; /* verde */
-}
-
-.navbar .nav-link,
-.navbar .navbar-brand {
-  color: #fff;
-}
-
-.navbar .nav-link:hover,
-.navbar .navbar-brand:hover {
-  color: #ddd;
-}
-
- .btn-primary {
-        background-color: #28a745;
-        border-color: #28a745;
-    }
-    .btn-primary:hover {
-        background-color: #218838;
-        border-color: #1e7e34;
-    }
-    /* Adicione essas linhas para evitar o azul ao clicar */
-    .btn-primary:active,
-    .btn-primary:focus,
-    .btn-primary.active {
-        background-color: #1e7e34 !important;
-        border-color: #1c7430 !important;
-        box-shadow: 0 0 0 0.25rem rgba(40, 167, 69, 0.5) !important;
-    }
-    
-
-    
     .admin-card {
       border-left: 4px solid #ffc107;
     }
@@ -90,7 +56,7 @@
   </script>
 
   <!-- Navbar Administrativa -->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-admin fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <i class="fas fa-user-shield me-2"></i> Gerenciar Usuários
@@ -104,7 +70,7 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">
-              <i class="fas fa-arrow-left me-1"></i> Voltar para o Painel
+              <i class="fas fa-arrow-left me-1"></i> Voltar
             </a>
           </li>
           <li class="nav-item">
