--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
   <title>Gerenciar Usuários - Sistema Igreja</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-  <style>
+   <style>
     .bg-admin {
       background: linear-gradient(135deg, #2c3e50 0%, #4a6491 100%) !important;
     }
@@ -18,6 +18,40 @@
       padding-top: 70px;
       background-color: #f8f9fa;
     }
+
+     .navbar {
+  background-color: #4CAF50; /* verde */
+}
+
+.navbar .nav-link,
+.navbar .navbar-brand {
+  color: #fff;
+}
+
+.navbar .nav-link:hover,
+.navbar .navbar-brand:hover {
+  color: #ddd;
+}
+
+ .btn-primary {
+        background-color: #28a745;
+        border-color: #28a745;
+    }
+    .btn-primary:hover {
+        background-color: #218838;
+        border-color: #1e7e34;
+    }
+    /* Adicione essas linhas para evitar o azul ao clicar */
+    .btn-primary:active,
+    .btn-primary:focus,
+    .btn-primary.active {
+        background-color: #1e7e34 !important;
+        border-color: #1c7430 !important;
+        box-shadow: 0 0 0 0.25rem rgba(40, 167, 69, 0.5) !important;
+    }
+    
+
+    
     .admin-card {
       border-left: 4px solid #ffc107;
     }
@@ -354,5 +388,11 @@
 </script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+
+<!-- Logoff após inatividade -->
+<script type="module" src="js/session-timeout.js"></script>
+
+  
 </body>
 </html>
