--- a/register.html
+++ b/register.html
@@ -90,7 +90,7 @@
   </script>
 
   <!-- Navbar Administrativa -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-admin fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">
         <i class="fas fa-user-shield me-2"></i> Gerenciar Usuários
@@ -104,7 +104,7 @@
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">
-              <i class="fas fa-arrow-left me-1"></i> Voltar
+              <i class="fas fa-arrow-left me-1"></i> Voltar para o Painel
             </a>
           </li>
           <li class="nav-item">
