--- a/exportar.html
+++ b/exportar.html
@@ -77,7 +77,7 @@ document.addEventListener('DOMContentLoaded', () => {
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto">
         <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="lista.html"><i class="fas fa-list me-1"></i> Lista de Membros</a></li>
+        <li class="nav-item"><a class="nav-link" href="listagem.html"><i class="fas fa-list me-1"></i> Lista de Membros</a></li>
       </ul>
     </div>
   </div> 
