--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
 <title>Painel Administrativo - Igreja Nova Esperança</title>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<style>
+
+    
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#4CAF50">
+    
+    <style>
 :root {
     --primary: #2e7d32;
     --secondary: #1b5e20;
