--- a/index.html
+++ b/index.html
@@ -265,5 +265,23 @@ navItems.forEach(item => {
 <!-- Logoff após inatividade -->
 <script type="module" src="js/session-timeout.js"></script>
 
+
+    
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(reg => {
+        console.log('Service Worker registrado:', reg.scope);
+      })
+      .catch(err => {
+        console.log('Falha ao registrar Service Worker:', err);
+      });
+  });
+}
+</script>
+
+    
+
 </body>
 </html>
