--- a/login.html
+++ b/login.html
@@ -12,7 +12,13 @@
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
-<style>
+
+  <link rel="manifest" href="/cadastro/manifest.json">
+<meta name="theme-color" content="#4CAF50">
+  
+  
+  
+  <style>
   body {
     font-family: 'Poppins', sans-serif;
     background: linear-gradient(135deg, #a8e6cf, #81c784);
@@ -158,5 +164,21 @@
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('/cadastro/service-worker.js')
+      .then(reg => {
+        console.log('Service Worker registrado:', reg.scope);
+      })
+      .catch(err => {
+        console.log('Falha ao registrar Service Worker:', err);
+      });
+  });
+}
+</script>
+
+
 </body>
 </html>
