--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -251,12 +251,14 @@
         lista.appendChild(item);
       });
       document.querySelectorAll('#lista-presentes .btn-outline-danger').forEach(btn => {
-        btn.addEventListener('click', (e) => {
-          const index = parseInt(e.target.closest('button').dataset.index);
-          presentes.splice(index, 1);
-          atualizarListaPresentes();
-        });
-      });
+  btn.addEventListener('click', (e) => {
+    const index = parseInt(e.target.closest('button').dataset.index);
+    presentes.splice(index, 1);
+    atualizarListaPresentes();
+    document.getElementById('btn-salvar').disabled = false; // ✅ habilita botão ao excluir
+  });
+});
+
     }
 
     async function carregarPresencasExistente(dataCulto) {
